--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "Cristian Villada",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.4",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
